--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@babel/runtime": "7.13.8",
+    "@babel/runtime": "7.13.10",
+    "classnames": "2.2.6",
+    "namor": "2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "react-table": "7.6.3"
   },
   "devDependencies": {
     "typescript": "4.1.3"
